# AVL-Tree-C

./: README.md  cmake_TreeAVL.sh  cmake_TreeRB.sh  cmake_ntree.sh
src/: a.out
src/TreeAVL/: CMakeLists.txt  TreeAVL.c  TreeAVL.h  test-TreeAVL.c
src/TreeRB/: CMakeLists.txt  TreeRB.c  TreeRB.h  test  test-TreeRB-exectime.c  test-TreeRB.c  test-TreeRBIHM.c
src/ntree/: CMakeLists.txt  NTreeConfig.cmake  debug.sh  min-max.h  ntree.c  test-ntree.c
tmp/cmake/: TreeAVLConfig.cmake  TreeRBConfig.cmake
tmp/include/: TreeAVL.h  TreeRB.h  ntree.h
tmp/lib/: libTreeAVL.so.0  libTreeAVL.so.0.0.1  libTreeRB.so.0  libTreeRB.so.0.0.1  libntree.so.0.0.1
